# lingua

./: .gitignore  .prettierignore  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs  coverage_report.md  langchain-import-implementation-plan.md  mise.toml  package-lock.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  provider-type-update-notes.md  publish.md
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: fix-fuzz-issue.md  fuzz-fix.md
.github/: README.md
.github/scripts/: braintrust-provider-types.mjs  braintrust-provider-types.test.mjs
.github/workflows/: ci.yml  cross-transformation-coverage.yml  provider-type-codex-autofix.yml  provider-type-feedback.yml  update-provider-types.yml
benches/: preview_benchmark.rs
bindings/: AnthropicMessagePartConfig.ts  AssistantContentPart.ts  CitationPosition.ts  ContentBlock.ts  ContentType.ts  ExtraMessagePartConfig.ts  Message.ts  MessageMetadata.ts  ProviderCapabilities.ts  TokenUsage.ts  ToolDefinition.ts  ToolExecutionType.ts  ToolResult.ts  Usage.ts  UserContentPart.ts
bindings/golang/: .golangci.yml  README.md  go.mod  helpers_test.go  lingua.go  lingua_roundtrip_test.go  lingua_test.go  roundtrip_test_helpers_test.go
bindings/lingua-wasm/: package.json  turbo.json
bindings/python/: README.md  pyproject.toml
bindings/python/src/lingua/: __init__.py  __init__.pyi
bindings/python/src/llmir/: __init__.py  __init__.pyi
bindings/python/tests/: test_roundtrip.py  test_validation.py
crates/anonymize/: Cargo.toml
crates/anonymize/src/: lib.rs
crates/anonymize/tests/: anonymize_json.rs
crates/braintrust-llm-router/: Cargo.toml  README.md
crates/braintrust-llm-router/benches/: streaming.rs  translation.rs
crates/braintrust-llm-router/docs/: ADDING_PROVIDER_CLIENT.md
crates/braintrust-llm-router/examples/: custom_auth.rs  multi_provider.rs  simple.rs  streaming.rs
crates/braintrust-llm-router/src/: braintrust_sdk_helpers.rs  client.rs  error.rs  failover.rs  lib.rs  retry.rs  router.rs  streaming.rs
crates/braintrust-llm-router/src/auth/: azure.rs  databricks.rs  google.rs  mod.rs
crates/braintrust-llm-router/src/catalog/: fallback.rs  mod.rs  model_list.json  resolver.rs  spec.rs
crates/braintrust-llm-router/src/providers/: anthropic.rs  azure.rs  bedrock.rs  body_model.rs  databricks.rs  google.rs  mistral.rs  mod.rs  openai.rs  openai_responses.rs  vertex.rs
crates/braintrust-llm-router/tests/: client_headers.rs  lint_secret_debug.rs  router.rs
crates/coverage-report/: Cargo.toml  README.md
crates/coverage-report/src/: compact.rs  discovery.rs  expected.rs  lib.rs  main.rs  normalizers.rs  report.rs  requests_expected_differences.json  responses_expected_differences.json  runner.rs  streaming_expected_differences.json  types.rs
crates/coverage-report/tests/: cross_provider_test.rs  provider_roundtrip_test.rs
crates/generate-types/: Cargo.toml
crates/generate-types/src/: main.rs  pbjson_patches.rs  proto_patches.rs  schema_converter.rs  tool_generator.rs
crates/lingua/: Cargo.toml  build.rs
crates/lingua/docs/: ADDING_PROVIDER_FORMAT.md
crates/lingua/src/: error.rs  extraction.rs  import_parse.rs  lib.rs  python.rs  wasm.rs  wasm_serialize.rs
crates/lingua/src/capabilities/: format.rs
crates/lingua/src/processing/: adapters.rs  dedup.rs  import.rs  import_openai_responses.rs  json_repair.rs  json_shape.rs  mod.rs  model_validators.rs  stream.rs  transform.rs
crates/lingua/src/processing/import/: ai_sdk.rs  langchain.rs  pydantic_ai.rs
crates/lingua/src/providers/: mod.rs
crates/lingua/src/providers/anthropic/: adapter.rs  capabilities.rs  convert.rs  detect.rs  generated.rs  mod.rs  params.rs  test_anthropic.rs  tool_discovery.rs
crates/lingua/src/providers/bedrock/: adapter.rs  anthropic.rs  convert.rs  mod.rs  params.rs  request.rs  response.rs
crates/lingua/src/providers/bedrock_anthropic/: adapter.rs  mod.rs
crates/lingua/src/providers/google/: adapter.rs  capabilities.rs  convert.rs  detect.rs  generated.rs  generated_pbjson.rs  mod.rs  params.rs  test_generated_types.rs  test_google.rs
crates/lingua/src/providers/openai/: adapter.rs  capabilities.rs  convert.rs  detect.rs  generated.rs  import.rs  mod.rs  params.rs  responses_adapter.rs  test_chat_completions.rs  test_responses.rs  tool_discovery.rs  tool_parsing.rs
crates/lingua/src/providers/vertex_anthropic/: adapter.rs  mod.rs
crates/lingua/src/universal/: convert.rs  defaults.rs  message.rs  mod.rs  reasoning.rs  request.rs  response.rs  response_format.rs  stop.rs  stream.rs  tool_choice.rs  tools.rs  transform.rs
crates/lingua/src/util/: error_check.rs  media.rs  mod.rs  test_runner.rs  testutil.rs
crates/lingua/src/validation/: anthropic.rs  bedrock.rs  cross_provider_tests.rs  google.rs  mod.rs  openai.rs
crates/lingua/tests/: fuzz_roundtrip.proptest-regressions  fuzz_roundtrip.rs  import_fixtures.rs  roundtrip_cases.json  schema_strategy.rs
crates/lingua/tests/fuzz/: Makefile  main.rs  schema_strategy.rs
docs/: ADDING_PROVIDERS.md  anthropic-format-detection.md  openai-transformations.md
examples/: basic_usage.rs  simple_openai.rs
examples/golang/: go.mod  (+2 more)
hooks/: pre-commit
patches/: quicktype-core@24.0.2.patch
payloads/: .eslintrc.cjs  .gitattributes  .oxlintrc.json  .prettierignore  AI_SDK_CAPTURE_GUIDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
paylods/: README.md
pipelines/: generate-provider-types.md  generate-provider-types.sh  provider_research.md
scripts/: compare_structure_only.py  compare_thinking_responses.py  compare_web_search_responses.py  generate-ts.rs  generate-ts.sh  generate-types.rs  install-hooks.sh  setup.sh  show-import-thinking-tool-calls-issue.sh  ts-gen.rs  validate_google_payload.py
serde_json/: Cargo.toml
serde_json/src/: lib.rs
src/: bridge.rs  error.rs  extraction.rs  golang.rs  lib.rs  providers.rs  python.rs  typescript_compatibility.rs  wasm.rs
tests/: catalog_test.rs  openai_payload_roundtrip.rs
(+5979 files in other folders)
