[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/braintrustdata/lingua"

[workspace.dependencies]
# Internal
lingua = { path = "crates/lingua", version = "0.1.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
# Use wrapper crate to isolate arbitrary_precision feature from downstream crates
big_serde_json = { path = "serde_json" }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.14.1"
ts-rs = { version = "11.0", features = ["serde-compat"] }
anyhow = "1.0"
thiserror = "2.0"
assert-json-diff = "2.0.2"

# Protobuf
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"

# Schema generation
typify = "0.4"
schemars = "0.8"
schemafy = "0.6"

# Optional providers
aws-sdk-bedrockruntime = "1.105.0"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Python
pyo3 = { version = "0.20", features = ["extension-module"] }

# Dev
tokio-test = "0.4"
paste = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
