[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/braintrustdata/lingua"

[workspace.dependencies]
# Internal
lingua = { path = "crates/lingua", version = "0.1.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
# Use wrapper crate to isolate arbitrary_precision feature from downstream crates
big_serde_json = { path = "serde_json" }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.14.1"
ts-rs = { version = "11.0", features = ["serde-compat"] }
anyhow = "1.0"
thiserror = "2.0"
assert-json-diff = "2.0.2"

# Protobuf
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"

# Schema generation
typify = "0.4"
schemars = "0.8"
schemafy = "0.6"

# Optional providers
aws-sdk-bedrockruntime = "1.105.0"

# URL and media handling
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"

# Bytes
bytes = "1"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Native HTTP client (non-WASM only)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }

# Python
pyo3 = { version = "0.20", features = ["extension-module"] }

# Dev
tokio-test = "0.4"
paste = "1.0"
log = "0.4"
env_logger = "0.11"

# ============================================================================
# Dependencies for braintrust-llm-router
# ============================================================================

# Braintrust SDK
braintrust-sdk-rust = "0.1.0-alpha.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
http = "1.1"
hyper = { version = "1.3" }

# Utilities
rand = { version = "0.8", features = ["std"] }
once_cell = "1.19"
parking_lot = "0.12"
arc-swap = "1.7"
pin-project = "1.1"
dashmap = "5"
lru = "0.12"
smallvec = "1.13"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ordered-float = "4.2"

# AWS (for Bedrock provider)
aws-sigv4 = { version = "1.3" }
aws-credential-types = { version = "1.2" }
aws-smithy-runtime-api = { version = "1.9" }
aws-smithy-eventstream = { version = "0.60" }
aws-smithy-types = { version = "1.3" }

# Auth
jsonwebtoken = { version = "9.3" }

# Tracing (optional)
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Router dev dependencies
wiremock = "0.5.22"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
pretty_assertions = "1.4"
tempfile = "3.10"
tokio-stream = "0.1"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
