[package]
name = "big_serde_json"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Wrapper for serde_json with arbitrary_precision feature"

[dependencies]
# This is a known issue with turning on `arbitrary_precision`
# (https://github.com/serde-rs/json/issues/1157) If we use serde_json directly,
# Rust will deduplicate the package and force everything (across crates) to use
# the same feature flags. So, we fork it and use the commit corresponding to:
# v1.0.145, with the fork package renamed so build systems can distinguish it
# from the normal serde_json package while the Rust library crate remains named
# serde_json.
serde_json = { package = "braintrust_serde_json", git = "https://github.com/braintrustdata/serde-json.git", rev = "905b790b50e8922370f3e73ef93d7d5fb7010edc", features = ["arbitrary_precision"] }
ts-rs = { version = "11.0", features = ["serde-compat"] }
