[package]
name = "anonymize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON anonymization utilities for Lingua payloads"

[dependencies]
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
