[package]
name = "anonymize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON anonymization utilities for Lingua payloads"

[dependencies]
serde_json = { package = "braintrust_serde_json_ordered", git = "https://github.com/braintrustdata/serde-json.git", rev = "5ab1958c74173fc654b418e107a5b7f9a25110ec", features = ["preserve_order"] }
