[package]
name = "generate-types"
version.workspace = true
edition.workspace = true
description = "Type generation tool for Lingua providers"
publish = false

[[bin]]
name = "generate-types"
path = "src/main.rs"

[dependencies]
serde.workspace = true
big_serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
typify.workspace = true
schemars.workspace = true
schemafy.workspace = true
